Adicionando tabela e outras seções

--- a/index.html
+++ b/index.html
@@ -28,13 +28,72 @@
         </div>
 
         <main class="main">
-            <h1>Bojack Horseman</h1>
+            <h1 id="introduction">Bojack Horseman</h1>
+            <p>BoJack Horseman é uma série de animação adulta de comédia dramática americana criada por Raphael Bob-Waksberg. A série é estrelada por Will Arnett como o personagem principal, BoJack Horseman. O elenco secundário também inclui Aaron Paul, Amy Sedaris, Alison Brie, Paul F. Tompkins e Minae Noji. A primeira temporada da série estreou em 22 de agosto de 2014, na Netflix.</p>
+            <figure>
+                <img src="./assets/images/bojack-horseman-season-5_x8pu.png" alt="Personagem Bojack, protagonista da série usando óculos escuros." width="500">
+                <figcaption>Personagem Bojack, protagonista da série usando óculos escuros.</figcaption>
+            </figure>
+            <p>A série é elogiada não só pela sátira que faz à indústria do entretenimento, mas também por sua abordagem realista ao lidar com temas como depressão, trauma, vício, comportamento autodestrutivo, racismo, sexismo e a condição humana.</p>
+            <h2 id="atmosphere">Ambientação</h2>
+            <p>A série é ambientada em um mundo onde os seres humanos e animais antropomórficos vivem lado a lado, enfocando especificamente a vida decadente da estrela do seriado dos anos 90, BoJack Horseman, enquanto ele planeja realizar um triunfal retorno à relevância de celebridade com uma biografia, que conta tudo que ele dita para sua ghostwriter, Diane Nguyen. BoJack também tem de lidar com as demandas da Princesa Carolyn, sua agente; Todd, seu colega e o Sr. Peanutbutter, um cão de uma sitcom dos anos 90 que claramente trata-se de um plágio de Horsin' Around.</p>
+            <table summary="Tabela referente as informações de número de episódios de cada temporada com sua respectiva data de lançamento">
+                <thead>
+                    <tr class="table-head">
+                        <th title=" Número da temporada">Temporada</th>
+                        <th title=" Número de episódios">Episódios</th>
+                        <th title="Data de lançamento">Originalmente lançado</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="table-body">
+                        <td>1</td>
+                        <td>12</td>
+                        <td>22 de agosto de 2014</td>
+                    </tr>
+                    <tr class="table-body">
+                        <td colspan="2">Especial</td>
+                        <td>19 de dezembro de 2014</td>
+                    </tr>
+                    <tr class="table-body">
+                        <td>2</td>
+                        <td>12</td>
+                        <td>17 de julho de 2015</td>
+                    </tr>
+                    <tr class="table-body">
+                        <td>3</td>
+                        <td>12</td>
+                        <td>22 de julho de 2016</td>
+                    </tr>
+                    <tr class="table-body">
+                        <td>4</td>
+                        <td>12</td>
+                        <td>8 de setembro de 2017</td>
+                    </tr>
+                    <tr class="table-body">
+                        <td>5</td>
+                        <td>12</td>
+                        <td>14 de setembro de 2018</td>
+                    </tr>
+                    <tr class="table-body">
+                        <td rowspan="2" colspan="1">6</td>
+                        <td rowspan="2" colspan="1">16</td>
+                        <td colspan="1">25 de outubro de 2019</td>
+                    </tr>
+                    <tr class="table-body">
+                        <td colspan="1">31 de janeiro de 2020</td>
+                    </tr>
+                </tbody>
+            </table>
+            <h2>Recepção</h2>
+            <p>Apesar de terem feito comentários mistos em sua estreia, os críticos foram notavelmente mais positivos em relação à segunda metade da primeira temporada, antes de aclamarem universalmente as temporadas seguintes. Sua temporada mais aclamada pela crítica é a sexta, a qual obteve nota 93/100 pela média dos críticos no Metacritic.</p>
         </main>
 
         <section class="anchors">
             <h2>Neste Artigo</h2>
             <ul>
-                <li><a href="#">Âncoras</a></li>
+                <li><a href="#introduction">Introdução - Bojack Horseman</a></li>
+                <li><a href="#atmosphere">Ambientação</a></li>
             </ul>
         </section>
     </div>
