Adicionando âncoras no artigo

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <p>A série é elogiada não só pela sátira que faz à indústria do entretenimento, mas também por sua abordagem realista ao lidar com temas como depressão, trauma, vício, comportamento autodestrutivo, racismo, sexismo e a condição humana.</p>
             <h2 id="atmosphere">Ambientação</h2>
             <p>A série é ambientada em um mundo onde os seres humanos e animais antropomórficos vivem lado a lado, enfocando especificamente a vida decadente da estrela do seriado dos anos 90, BoJack Horseman, enquanto ele planeja realizar um triunfal retorno à relevância de celebridade com uma biografia, que conta tudo que ele dita para sua ghostwriter, Diane Nguyen. BoJack também tem de lidar com as demandas da Princesa Carolyn, sua agente; Todd, seu colega e o Sr. Peanutbutter, um cão de uma sitcom dos anos 90 que claramente trata-se de um plágio de Horsin' Around.</p>
+            <h2 id="episodes">Episódios</h2>
             <table summary="Tabela referente as informações de número de episódios de cada temporada com sua respectiva data de lançamento">
                 <thead>
                     <tr class="table-head">
@@ -85,7 +86,7 @@
                     </tr>
                 </tbody>
             </table>
-            <h2>Recepção</h2>
+            <h2 id="acceptance">Recepção</h2>
             <p>Apesar de terem feito comentários mistos em sua estreia, os críticos foram notavelmente mais positivos em relação à segunda metade da primeira temporada, antes de aclamarem universalmente as temporadas seguintes. Sua temporada mais aclamada pela crítica é a sexta, a qual obteve nota 93/100 pela média dos críticos no Metacritic.</p>
         </main>
 
@@ -94,6 +95,8 @@
             <ul>
                 <li><a href="#introduction">Introdução - Bojack Horseman</a></li>
                 <li><a href="#atmosphere">Ambientação</a></li>
+                <li><a href="#episodes">Episódios</a></li>
+                <li><a href="#acceptance">Recepção</a></li>
             </ul>
         </section>
     </div>
