Adicionando figure na seção de recepção

--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
                 <figcaption>Personagem Bojack, protagonista da série usando óculos escuros.</figcaption>
             </figure>
             <p>A série é elogiada não só pela sátira que faz à indústria do entretenimento, mas também por sua abordagem realista ao lidar com temas como depressão, trauma, vício, comportamento autodestrutivo, racismo, sexismo e a condição humana.</p>
+
             <h2 id="atmosphere">Ambientação</h2>
             <p>A série é ambientada em um mundo onde os seres humanos e animais antropomórficos vivem lado a lado, enfocando especificamente a vida decadente da estrela do seriado dos anos 90, BoJack Horseman, enquanto ele planeja realizar um triunfal retorno à relevância de celebridade com uma biografia, que conta tudo que ele dita para sua ghostwriter, Diane Nguyen. BoJack também tem de lidar com as demandas da Princesa Carolyn, sua agente; Todd, seu colega e o Sr. Peanutbutter, um cão de uma sitcom dos anos 90 que claramente trata-se de um plágio de Horsin' Around.</p>
+
             <h2 id="episodes">Episódios</h2>
             <table summary="Tabela referente as informações de número de episódios de cada temporada com sua respectiva data de lançamento">
                 <thead>
@@ -86,8 +88,15 @@
                     </tr>
                 </tbody>
             </table>
+
             <h2 id="acceptance">Recepção</h2>
             <p>Apesar de terem feito comentários mistos em sua estreia, os críticos foram notavelmente mais positivos em relação à segunda metade da primeira temporada, antes de aclamarem universalmente as temporadas seguintes. Sua temporada mais aclamada pela crítica é a sexta, a qual obteve nota 93/100 pela média dos críticos no Metacritic.</p>
+            <figure>
+                <img src="./assets/images/bojack-horseman-photo2.jpg" alt="Bojack irritado com o Todd Chavez" width="500">
+                <figcaption>Bojack irritado com o Todd Chavez</figcaption>
+            </figure>
+            <p>Em 2017, a série recebeu o prêmio de "Distinção Especial para Séries de Televisão" do Festival de Cinema de Animação de Annecy.</p>
+            <p>Em 2019, na 71ª cerimônia do Emmy Award, a série foi indicada pela primeira vez a "Melhor Programa Animado", pelo seu episódio da quinta temporada "Free Churro".</p>
         </main>
 
         <section class="anchors">
