--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header>   
         <figure class="logo">
-            <img src="assets/images/logo.png" alt="Logo do site"  width="200"/>
+            <img src="./assets/images/wikipedia_3291693.png" alt="Logo do site"  width="80"/>
         </figure>
     </header>
 
