Adicionando página do Solar Opposites

--- a/f-is-for-family.html
+++ b/f-is-for-family.html
@@ -24,6 +24,7 @@
                 <ul>
                     <li><a href="index.html">Bojack Horseman</a></li>
                     <li><a href="f-is-for-family.html">F Is for Family</a></li>
+                    <li><a href="solar-opposites.html">Solar Opposites</a></li>
                 </ul>
             </nav>
         </div>
